# ovarian-cancer-platinum-response

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  PROJECT_LOG.md  README.md  diagnose_features.py  investigate_clinical_labels.py  paper.bib  paper.md  pyproject.toml  requirements.txt  run.py  run_ablation_study.py  validate_external.py
config/: config.template.yaml  config.yaml
data/: README.md
figures/: figure1_pipeline.py  figure2_ablation.py  figure3_validation.py
notebooks/: analysis.ipynb
phase2/: phase2_00_diag.R  phase2_01_inspect_clinical.R  phase2_02_cox_model.R  phase2_03_rf_feature_importance.py  phase2_03b_recover_gene_names.py  phase2_04_pathway_enrichment.py
phase2/outputs/: cox_hazard_ratios.csv  cox_patients_with_risk.csv  cox_ph_test.csv  enrichment_results_full.csv  enrichment_results_significant.csv  rf_feature_importances_full.csv  rf_feature_importances_named.csv  rf_importances_Random_Forest_12m.csv  rf_importances_Random_Forest_18m.csv  rf_importances_Random_Forest_24m.csv  rf_importances_named_Random_Forest_12m.csv  rf_importances_named_Random_Forest_18m.csv  rf_importances_named_Random_Forest_24m.csv  top100_genes.txt  top100_genes_named.txt  top200_genes.txt  top200_genes_named.txt  top500_genes.txt  top500_genes_named.txt  top500_genes_variance_order.txt  top50_genes.txt  top50_genes_named.txt
src/: __init__.py  ablation.py  data_loader.py  evaluation.py  features.py  label_investigation.py  models.py  pipeline.py  preprocessing.py  visualization.py
tests/: test_ablation.py  test_label_investigation.py  test_preprocessing.py
validation/: 01_download_and_parse.R  02_parse_metadata.R  03_fix_labels.R  04_probe_mapping.R  05_batch_correction.R  inspect_metadata.R  investigate_labels.R
